# dejavu-engine

./: Cargo.toml  Readme.md
.run/: Bootstrap.run.xml  Test All.run.xml
projects/dejavu-bootstrap/: Cargo.toml  build.rs
projects/dejavu-bootstrap/src/: lib.rs
projects/dejavu-bootstrap/src/hello/: hello_render.rs  hello_render.rs.djv  mod.rs
projects/dejavu-bootstrap/src/rust_codegen/: basic_render.rs  basic_render.rs.djv  mod.rs
projects/dejavu-bootstrap/tests/: main.rs
projects/dejavu-core/: Cargo.toml  readme.md
projects/dejavu-core/src/: lib.rs
projects/dejavu-core/src/compiler/: mod.rs
projects/dejavu-core/src/compiler/config/: der.rs  mod.rs
projects/dejavu-core/src/compiler/render/: mod.rs  write_nodes.rs
projects/dejavu-core/src/cps/: mod.rs
projects/dejavu-core/src/errors/: mod.rs
projects/dejavu-core/src/hir/: cond.rs  conditional.rs  mod.rs  text.rs
projects/dejavu-core/src/hir/conditional/: mod.rs
projects/dejavu-core/src/hir/expr/: mod.rs
projects/dejavu-core/src/hir/looping/: mod.rs
projects/dejavu-core/src/hir/text/: mod.rs
projects/dejavu-core/src/parser/: conditional.rs  looping.rs  mod.rs  whitespace.rs
projects/dejavu-core/src/parser/condition/: mod.rs
projects/dejavu-core/src/parser/expression/: mod.rs
projects/dejavu-core/src/parser/slots/: mod.rs
projects/dejavu-core/src/parser/utils/: mod.rs
projects/dejavu-core/src/parser/value/: mod.rs
projects/dejavu-core/src/value/: constructor.rs  display.rs  mod.rs  whitespace.rs
projects/dejavu-core/src/value/atomic/: mod.rs
projects/dejavu-core/src/value/convert/: mod.rs
projects/dejavu-core/src/value/expression/: binary.rs  mod.rs
projects/dejavu-core/src/value/for_statement/: mod.rs
projects/dejavu-core/src/value/write_rust/: mod.rs
projects/dejavu-core/tests/: basic.rs  if-condition.md  literal.md  mod.rs
projects/dejavu-core/tests/hello/: basic.rs  basic.rs.djv  mod.rs
projects/dejavu-core/tests/test_class/: mod.rs  test_class.djv
projects/dejavu-core/tests/test_control/: mod.rs  test_for.dj  test_for.ron  test_if.dj  test_if.djv  test_if.ron  test_match.dj
projects/dejavu-engine/: Cargo.toml
projects/dejavu-engine/src/: lib.rs
projects/dejavu-engine/src/builder/: mod.rs
projects/dejavu-engine/src/compiler/: mod.rs
projects/dejavu-engine/src/compiler/config/: der.rs  mod.rs
projects/dejavu-engine/src/compiler/render/: mod.rs  write_nodes.rs
projects/dejavu-engine/src/escaper/: mod.rs
projects/dejavu-engine/src/for_3rd/: mod.rs
projects/dejavu-engine/src/looper/: mod.rs
projects/dejavu-engine/src/parser/: mod.rs
projects/dejavu-engine/src/parser/condition/: mod.rs
projects/dejavu-engine/src/parser/expression/: mod.rs
projects/dejavu-engine/src/parser/value/: mod.rs
projects/dejavu-engine/src/traits/: mod.rs
projects/dejavu-engine/src/value/: mod.rs  ser.rs
projects/dejavu-engine/templates/: display.rs.dejavu  out.rs.jinja
projects/dejavu-engine/tests/: if-condition.md  main.rs  mod.rs  readme.md
projects/dejavu-engine/tests/hello/: basic.rs.djv  mod.rs
projects/dejavu-engine/tests/test_control/: mod.rs  test_for.dj  test_for.rs  test_if.dj  test_if.djv  test_if.ron  test_if.rs
projects/dejavu-highlighter/: Cargo.toml
projects/dejavu-highlighter/src/: lib.rs
projects/dejavu-highlighter/src/hello/: hello_render.rs  hello_render.rs.djv
projects/dejavu-highlighter/src/render/: mod.rs
projects/dejavu-highlighter/tests/: main.rs
projects/dejavu-parser/: Cargo.toml  Yggdrasil.toml  build.rs  package.json  saha.peg  yggdrasil.toml
projects/dejavu-parser/grammars/: debug.ygg  dejav.ygg  dejavu.ygg  dejavu2.ygg
projects/dejavu-parser/src/: lib.rs  saha.peg  saha.rs
projects/dejavu-parser/src/dejavu/: debug.ron  mod.rs  parse_ast.rs  parse_cst.rs  readme.md
projects/dejavu-parser/src/extends/: mod.rs
projects/dejavu-parser/src/old/: mod.rs
projects/dejavu-parser/src/parser/: mod.rs
projects/dejavu-parser/src/utils/: mod.rs
projects/dejavu-parser/src/visitor/: conditional.rs  mod.rs
projects/dejavu-parser/tests/: main.rs
projects/dejavu-parser/tests/control_flow/: each.dejavu  for.dejavu  if.dejavu  invoke.dejavu  match.dejavu  slot.dejavu  until.dejavu  while.dejavu
projects/dejavu-parser/tests/hello/: mod.rs
projects/dejavu-parser/tests/real_world/: tokens.dejavu
projects/dejavu-parser/tests/test_class/: mod.rs
projects/dejavu-parser/tests/test_control/: mod.rs  test_if.djv  test_if.ron  test_if.rs
projects/dejavu-runtime/: Cargo.toml  Readme.md  readme.md
projects/dejavu-runtime/src/: lib.rs
projects/dejavu-runtime/src/display/: mod.rs
projects/dejavu-runtime/src/escaper/: html.rs  mod.rs  text.rs  utils.rs
projects/dejavu-runtime/src/looper/: mod.rs
projects/dejavu-runtime/src/traits/: mod.rs
projects/dejavu-runtime/tests/: for-loop.md  main.rs
projects/dejavu-runtime/tests/escaper/: mod.rs
projects/dejavu-wasi/: Cargo.toml  dejavu.toml
projects/dejavu-wasi/src/: lib.rs  traits.rs
projects/dejavu-wasi/src/backends/: mod.rs
projects/dejavu-wasi/src/bindings/: mod.rs
projects/dejavu-wasi/src/exports/: host.rs
projects/dejavu-wasi/src/helpers/: mod.rs
projects/dejavu-wasi/src/renderer/: mod.rs
projects/dejavu-wasi/wit/: world.wit
projects/indentation/: Cargo.toml  package.json  readme.md
projects/indentation/src/: lib.rs
projects/indentation/src/formatter/: mod.rs
projects/indentation/src/from_raw/: mod.rs
projects/indentation/src/macros/: mod.rs
projects/saha-types/: Cargo.toml
projects/saha-types/src/: lib.rs
projects/saha-types/src/compiler/: mod.rs
projects/saha-types/src/errors/: display.rs  for_peg.rs  location.rs  mod.rs
projects/saha-types/src/value/: constructor.rs  display.rs  mod.rs  ser.rs  whitespace.rs
projects/saha-types/src/vm/: mod.rs
projects/saha-types/tests/: main.rs
projects/voml-collection/: Cargo.toml  Readme.md  package.json
projects/voml-collection/src/: lib.rs
projects/voml-collection/src/atomic/: mod.rs
projects/voml-collection/src/collections/: mod.rs
projects/voml-collection/tests/: byte.rs
(+57 files in other folders)
