[package]
name = "dejavu-bootstrap"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/dejavu-engine"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.dejavu-runtime]
#version = "0.1.0"
path = "../dejavu-runtime"

[dev-dependencies.dejavu-engine]
#version = "0.1.0"
path = "../dejavu-engine"

[build-dependencies]

#[build-dependencies.dejavu-engine]
#version = "0.1.0"
#path = "../dejavu-engine"

[features]
default = []
