[package]
name = "dejavu-ir"
version = "0.0.0"
authors = ["192607617@qq.com"]
description = "Error Handling, Parser and Compiler of DejaVu Language"
license = "MPL-2.0"
readme = "readme.md"
repository = "https://github.com/oovm/dejavu-engine"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]


[dependencies.dejavu-parser]
version = "0.1.*"
path = '../dejavu-parser'


[dependencies.indentation]
version = "0.1.*"
path = "../indentation"

[features]
default = []

#json = ["serde_json", "serde_json/preserve_order"]
#yaml = ["yaml-rust"]
#hjson = ["serde-hjson"]