[package]
name = "dejavu-engine"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "Error Handling, Parser and Compiler of DejaVu Language"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/oovm/dejavu-engine"
exclude = ["/tests/*"]
edition = "2018"

[[bin]]
name = "dejavu"
path = "src/main.rs"

[dependencies]
clap = "4.0.29"
serde_json = "1.0.89"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.dejavu-ir]
version = "0.0.*"
path = "../dejavu-core"

[features]
default = []

#json = ["serde_json", "serde_json/preserve_order"]
#yaml = ["yaml-rust"]
#hjson = ["serde-hjson"]