[package]
name = "dejavu-engine"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "Error Handling, Parser and Compiler of DejaVu Language"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/oovm/dejavu-engine"
exclude = ["/tests/*"]
edition = "2018"

[[bin]]
name = "dejavu"
path = "src/main.rs"

[dependencies]

[dependencies.dejavu-ir]
version = "0.0.*"
path = "../dejavu-core"

[dependencies.dejavu-runtime]
version = "0.1.*"
path = "../dejavu-runtime"

[features]
default = []

#json = ["serde_json", "serde_json/preserve_order"]
#yaml = ["yaml-rust"]
#hjson = ["serde-hjson"]