[package]
name = "dejavu-highlighter"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Syntax highlighter for dejavu language"
repository = "https://github.com/oovm/dejavu-engine"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
color-span = "0.1.0"

#[dependencies.dejavu-parser]
#version = "0.1.0"
#path = "../dejavu-parser"

[dev-dependencies]

[features]
default = []
