[package]
name = "dejavu-parser"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Parser of DejaVu Language"
homepage = "https://github.com/ygg-lang/yggdrasil-rs"
repository = "https://github.com/ygg-lang/yggdrasil-template/tree/master/projects/build_by_dep"
documentation = "https://ygg-lang.github.io/yggdrasil-template/build_by_script/struct.Json5Language.html"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.dejavu-ir]
version = "0.0.*"
path = '../dejavu-core'

[dependencies.yggdrasil-rt]
version = "0.0.8"
path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[dev-dependencies]

[build-dependencies.yggdrasil-shared]
version = "0.2.3"
path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-core'

[features]
default = []

