[package]
name = "dejavu-parser"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Parser of DejaVu Language"
homepage = "https://github.com/ygg-lang/yggdrasil-rs"
repository = "https://github.com/ygg-lang/yggdrasil-template/tree/master/projects/build_by_dep"
documentation = "https://docs.rs/dejavu-parser"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.yggdrasil-rt]
version = "0.0.11"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[dev-dependencies]

[dev-dependencies.yggdrasil-shared]
version = "0.2.*"
path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-core'

[features]
default = []

