[package]
name = "dejavu-parser"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Parser of DejaVu Language"
homepage = "https://github.com/oovm/dejavu-engine"
repository = "https://github.com/oovm/dejavu-engine/tree/dev/projects/dejavu-parser"
documentation = "https://docs.rs/dejavu-parser"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.dejavu-ir]
version = "0.0.*"
path = "../dejavu-core"

[dependencies.yggdrasil-rt]
version = "0.1.3"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[dev-dependencies]

[features]
default = []

