[package]
name = "dejavu-runtime"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "DejaVu shared types and runtime"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
serde_json = { version = "1.0.89", optional = true }
anyhow = "1.0.66"

[dev-dependencies]

[features]
default = []
json = ["serde_json", "serde_json/preserve_order"]
#yaml = ["yaml-rust"]
#hjson = ["serde-hjson"]