[package]
name = "dejavu-runtime"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "DejaVu shared types and runtime"
license = "MPL-2.0"
readme = "readme.md"
repository = "https://github.com/oovm/dejavu-engine"
documentation = "https://docs.rs/dejavu-runtime"
exclude = ["/tests/*"]
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []