[package]
name = "dejavu-runtime"
version = "0.1.1"
authors = ["192607617@qq.com"]
description = "DejaVu shared types and runtime"
categories = ["template-engine", "text-processing"]
license = "MPL-2.0"
readme = "readme.md"
homepage = "https://github.com/oovm/dejavu-engine"
repository = "https://github.com/ygg-lang/dejavu-engine/tree/dev/projects/dejavu-runtime"
documentation = "https://docs.rs/dejavu-runtime"
exclude = ["/tests/*"]
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []