[package]
name = "dejavu-wasi"
version = "0.0.6"
authors = ["Aster <192607617@qq.com>"]
description = "Cross-language notedown sharing of intermediate representations"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/notedown-wasi"
keywords = ["grammar"]
categories = ["wasm", "compilers", "text-processing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[lib]
name = "dejavu_wasi"
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2.5.0"
wit-bindgen = "0.24.0"
toml = { version = "0.8.12", optional = true }
serde_json = { version = "1.0.115", optional = true }


[dependencies.dejavu-runtime]
version = "0.1.*"
path = "../dejavu-runtime"

[dependencies.indentation]
version = "0.1.*"
path = "../indentation"

[features]
default = []
