[package]
name = "indentation"
version = "0.1.5"
authors = ["Aster <192607617@qq.com>"]
categories = ["text-processing"]
description = "Indentation Formatter"
keywords = ["indentation", "formatter"]
homepage = "https://github.com/ygg-lang/pex-lisp"
repository = "https://github.com/ygg-lang/pex-lisp"
documentation = "https://docs.rs/indentation"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []
