[package]
name = "saha-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic = "0.4.1"
peginator = { version = "0.3.0", optional = true }
rust_decimal = { version = "1.26.1", features = ["c-repr"] }


[dev-dependencies]

[features]
default = []
